--- a/src/main/resources/templates/recipe/ingredient/list.html
+++ b/src/main/resources/templates/recipe/ingredient/list.html
@@ -22,10 +22,19 @@
 <div class="container-fluid" style="margin-top: 20px">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
+      <div>
+        <a class="btn btn-default" href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/new'}" role="button">New Ingredient</a>
+      </div>
+
       <div class="panel panel-primary">
 
         <div class="panel-heading">
-          <h1 class="panel-title">Ingredients</h1>
+          <h1 class="panel-title">Ingredients
+            <div>
+              <a class="btn btn-default" href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/new'}" role="button">New Ingredient</a>
+            </div>
+          </h1>
+
         </div>
         <div class="panel-body">
 
